--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,7 @@ en:
         duration: Duration
         owner: Course owner
         organizer: Organizer
+        frequency: Frequency
         
       lecturer:
         list: Lecturer Listing
