--- a/config/locales/ms_MY.yml
+++ b/config/locales/ms_MY.yml
@@ -48,6 +48,7 @@ ms_MY:
         duration: Tempoh
         owner: Pemilik kursus
         organizer: Penganjur
+        frequency: Kekerapan
 
       lecturer:
         list: Senarai Pengajar
